--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,17 @@
             "name": "Python: Django",
             "type": "python",
             "request": "launch",
+            "program": "${workspaceFolder}/manage.py",
+            "args": [
+                "runserver"
+            ],
+            "django": true,
+            "justMyCode": true
+        },
+        {
+            "name": "Python: Django",
+            "type": "python",
+            "request": "launch",
             "program": "${workspaceFolder}\\manage.py",
             "args": [
                 "runserver"
